# dynosite

./: .gitignore  Cargo.toml  README.md  example_aws_setup.sh  example_ci_setup.yml  example_ci_setup_aws.yml  example_ci_setup_github_data_only.yml  example_github_setup.sh
src/: cli.rs  constants.rs  error.rs  html.rs  main.rs  plot.rs  types.rs  utils.rs
src/site/: data.rs  dynosite.rs  execution.rs  html.rs  mod.rs  plot.rs
