[package]
name = "dynosite"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.210", features = ["derive", "rc"]}
serde_json = "1.0.128"
plotters = "0.3.7"
tokio = { version = "1.40.0", features = ["full"] }
clap = {version = "4.5.20", features = ["derive"]}
chrono = "0.4.38"
walkdir = "2.5.0"